--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./dist/css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="./dist/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
@@ -16,6 +16,9 @@
 </head>
 <body layout="row">
 
+<div class="maindiv">
+    <span>Hello world</span>
+</div>
 
 <script type="text/javascript" src="dist/js/vendor.min.js" defer></script>
 <script type="text/javascript" src="dist/js/app.js" defer></script>
