--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,18 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
-    <title>APP</title>
+    <title>RR</title>
 
 </head>
 <body layout="row">
 <div class="container-fluid text-center" id="banner">
-    <figure><img class="brand_logo" src="images/gold-logo.jpg" alt="logo"></figure>
+    <br>
+    <figure><img class="brand_logo" src="images/RR-logo.jpg" alt="logo"></figure>
+    <br>
 </div>
 
 <nav id="nav_bar" class="container-fluid navbar navbar-default rrnavbar text-center">
@@ -27,23 +28,24 @@
             </button>
             <!--<span id="selectedMenu" class="text-center">aa{{selectedMenuItem}}</span>-->
             <a id="brand_logo_minimized"  class="navbar-brand hidden" href="#">
-                <figure><img class="brand_logo_min" src="images/gold-logo.jpg" alt="logo"></figure>
+                <figure><img class="brand_logo_min" src="images/RR-logo.jpg" alt="logo"></figure>
             </a>
         </div>
 
 
     <div id="myNavbar" class="navbar-collapse">
         <ul class="nav navbar-collapse">
-            <li class="item1" ui-sref="home"><span href="#">HOME</span></li><!--
-         --><li class="item2" ui-sref="events"><span href="#">EVENTS</span></li><!--
-         --><li class="item3" ui-sref="poojas"><span href="#">POOJAS</span></li><!--
-         --><li class="item4" ui-sref="festivals"><span href="#">FESTIVALS</span></li>
+            <li class="item1" ui-sref="home"><span href="#">HOME</span></li>
+            <li class="item2" ui-sref="events"><span href="#">EVENTS</span></li>
+            <li class="item3" ui-sref="poojas"><span href="#">POOJAS</span></li>
+            <li class="item4" ui-sref="festivals"><span href="#">FESTIVALS</span></li>
             <li class="item5" ui-sref="contact"><span href="#">CONTACT</span></li>
             <li class="item6" ui-sref="yagam"><span href="#">YAGAM</span></li>
             <hr id="floatingline"/>
-            <div class="container-fluid goldline"></div>
+
         </ul>
     </div>
+        <div class="container-fluid goldline"></div>
     </div>
 
 
