Added material dependencies. reordered pages

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body layout="row">
 <div class="container-fluid text-center" id="banner">
     <br>
-    <figure><img class="brand_logo" src="images/RR-logo.jpg" alt="logo"></figure>
+    <figure><img class="brand_logo" src="images/RR_Sun_Logo.jpg" alt="logo"></figure>
     <br>
 </div>
 
@@ -37,12 +37,12 @@
 
     <div id="myNavbar" class="navbar-collapse collapse">
         <ul class="nav navbar-collapse">
-            <li class="item1" ui-sref="home"><span href="#" class="waves-effect waves-orange">HOME</span></li>
-            <li class="item2" ui-sref="events"><span href="#" class="waves-effect waves-orange">EVENTS</span></li>
-            <li class="item3" ui-sref="poojas"><span href="#" class="waves-effect waves-orange">POOJAS</span></li>
-            <li class="item4" ui-sref="festivals"><span href="#" class="waves-effect waves-orange">FESTIVALS</span></li>
-            <li class="item5" ui-sref="contact"><span href="#" class="waves-effect waves-orange">CONTACT</span></li>
-            <li class="item6" ui-sref="yagam"><span href="#" class="waves-effect waves-orange">YAGAM</span></li>
+            <li class="item1" ui-sref="home"><span class="waves-effect waves-orange">HOME</span></li>
+            <li class="item2" ui-sref="events"><span class="waves-effect waves-orange">EVENTS</span></li>
+            <li class="item3" ui-sref="poojas"><span class="waves-effect waves-orange">POOJAS</span></li>
+            <li class="item4" ui-sref="gallery"><span class="waves-effect waves-orange">GALLERY</span></li>
+            <li class="item5" ui-sref="contact"><span class="waves-effect waves-orange">CONTACT</span></li>
+            <li class="item6" ui-sref="yagam"><span class="waves-effect waves-orange">YAGAM</span></li>
             <hr id="floatingline"/>
 
         </ul>
@@ -67,25 +67,25 @@
             <div class="col-md-2">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Contact</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">License</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Events</a></li>
+                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">About</a></li>
+                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Contact</a></li>
+                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">License</a></li>
+                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Events</a></li>
                 </ul>
             </div>
             <div class="col-md-2">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Yagam</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
+                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Yagam</a></li>
+                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">People</a></li>
 
                 </ul>
             </div>
             <div class="col-md-2">
-                <button type="button" class="btn btn-sm btn-primary waves-effect waves-light"><i class="fa fa-facebook"> </i> <span>Facebook</span></button>
-                <button type="button" class="btn  btn-sm  btn-info waves-effect waves-light"><i class="fa fa-twitter"> </i> <span>Twitter</span></button>
-                <button type="button" class="btn btn-sm  btn-danger waves-effect waves-light"><i class="fa fa-google-plus"> </i> <span>Google +</span></button>
-                <button type="button" class="btn btn-sm  btn-default waves-effect waves-light"><i class="fa fa-envelope-o"> </i> <span>Email</span></button>
+                <a href="http://www.facebook.com" type="button" class="btn btn-sm btn-primary waves-effect waves-light"><i class="fa fa-facebook"> </i> <span>Facebook</span></a>
+                <a type="button" class="btn  btn-sm  btn-info waves-effect waves-light"><i class="fa fa-twitter"> </i> <span>Twitter</span></a>
+                <a type="button" class="btn btn-sm  btn-danger waves-effect waves-light"><i class="fa fa-google-plus"> </i> <span>Google +</span></a>
+                <a type="button" class="btn btn-sm  btn-default waves-effect waves-light"><i class="fa fa-envelope-o"> </i> <span>Email</span></a>
             </div>
             <div class="col-md-2"></div>
         </div>
