added - wow js dependencies and gulp save - viewer Js dependencies and gulp save

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
 </footer>
 
 
-<script type="text/javascript" src="js/vendor.min.js" defer></script>
+<script type="text/javascript" src="js/vendor.js" defer></script>
 <script type="text/javascript" src="js/mdb.js" defer></script>
 <script type="text/javascript" src="js/app.js" defer></script>
 
