poojas page 90% complete. Sarvalankara pooja left

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body layout="row">
-<div class="container-fluid text-center" id="banner">
+<div class="container-fluid text-center wow fadeIn" id="banner">
     <br>
     <figure><img class="brand_logo" src="images/RR_Sun_Logo.jpg" alt="logo"></figure>
     <br>
@@ -37,12 +37,12 @@
 
     <div id="myNavbar" class="navbar-collapse collapse">
         <ul class="nav navbar-collapse">
-            <li class="item1" ui-sref="home"><span class="waves-effect waves-orange">HOME</span></li>
-            <li class="item2" ui-sref="events"><span class="waves-effect waves-orange">EVENTS</span></li>
-            <li class="item3" ui-sref="poojas"><span class="waves-effect waves-orange">POOJAS</span></li>
-            <li class="item4" ui-sref="gallery"><span class="waves-effect waves-orange">GALLERY</span></li>
-            <li class="item5" ui-sref="contact"><span class="waves-effect waves-orange">CONTACT</span></li>
-            <li class="item6" ui-sref="yagam"><span class="waves-effect waves-orange">YAGAM</span></li>
+            <li class="item1" ui-sref="home"><span >HOME</span></li>
+            <li class="item2" ui-sref="events"><span >EVENTS</span></li>
+            <li class="item3" ui-sref="poojas"><span >POOJAS</span></li>
+            <li class="item4" ui-sref="gallery"><span>GALLERY</span></li>
+            <li class="item5" ui-sref="contact"><span>CONTACT</span></li>
+            <li class="item6" ui-sref="yagam"><span>YAGAM</span></li>
             <hr id="floatingline"/>
 
         </ul>
@@ -92,7 +92,7 @@
     </div>
     <div class="footer-copyright text-center rgba-black-light">
         <div class="container-fluid">
-            © 2015 Copyright: <a href="#"> Raja Rajeshwari trust </a>
+            © 2016 Copyright: <a href="#">Vadakkekunnath Sree Raja Rajeshwari Devi Trust </a>
         </div>
     </div>
 </footer>
