yagam page started.

--- a/app/index.html
+++ b/app/index.html
@@ -11,17 +11,24 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
-    <title>RR</title>
+    <title>Vadakkekunnath Sree RajaRajeswari Devi Temple</title>
+    <link rel="shortcut icon" href="images/title.png" type="image/png">
 
 </head>
 <body layout="row">
-<div class="container-fluid text-center wow fadeIn" id="banner">
-    <br>
-    <figure><img class="brand_logo" src="images/RR_Sun_Logo.jpg" alt="logo"></figure>
-    <br>
+<div class="container-fluid text-center " id="banner">
+    <div class="col-md-2 hidden-sm hidden-xs"></div>
+    <div class="col-md-1 hidden-sm hidden-xs text-center wow fadeInDown"><figure><img class="brand_logo" src="images/lampleft.png" alt="logo"></figure></div>
+    <div class="col-md-1"></div>
+    <div class="col-md-4 text-center wow fadeIn"> <figure style="padding-right: 50px;"><img class="brand_logo" src="images/devicopy.jpg" alt="logo"></figure></div>
+    <div class="col-md-1 hidden-sm hidden-xs text-center wow fadeInDown"><figure><img class="brand_logo" src="images/lampright.png" alt="logo"></figure></div>
 </div>
-
+<br><br>
+<div class="container text-center">
+    <h5 class="maketextgold" style="font-family: gramond;font-weight: 400;">VADAKKEKUNNATHU SREE RAJA RAJESWARI TEMPLE</h5>
+</div>
 <nav id="nav_bar" class="container-fluid navbar navbar-default rrnavbar text-center">
+
     <div class="container-fluid">
         <div class="navbar-header">
             <button id="menuButton" type="button" class="navbar-toggle btn-navbar" data-toggle="collapse" data-target="#myNavbar">
