--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,12 @@
     <div class="col-md-2 hidden-sm hidden-xs"></div>
     <div class="col-md-1 hidden-sm hidden-xs text-center wow fadeInDown"><figure><img class="brand_logo" src="images/lampleft.png" alt="logo"></figure></div>
     <div class="col-md-1"></div>
-    <div class="col-md-4 text-center wow fadeIn"> <figure style="padding-right: 50px;"><img class="brand_logo" src="images/devicopy.jpg" alt="logo"></figure></div>
+    <div class="col-md-4 text-center wow fadeIn"> <figure><img class="brand_logo" src="images/devicopy.jpg" alt="logo"></figure></div>
     <div class="col-md-1 hidden-sm hidden-xs text-center wow fadeInDown"><figure><img class="brand_logo" src="images/lampright.png" alt="logo"></figure></div>
 </div>
 <br><br>
 <div class="container text-center">
-    <h5 class="maketextgold" style="font-family: gramond;font-weight: 400;">VADAKKEKUNNATHU SREE RAJA RAJESWARI TEMPLE</h5>
+    <h5 class="maketextgold bold-700" style="font-family: gramond;">VADAKKEKUNNATHU SREE RAJA RAJESWARI TEMPLE</h5>
 </div>
 <nav id="nav_bar" class="container-fluid navbar navbar-default rrnavbar text-center">
 
