--- a/app/index.html
+++ b/app/index.html
@@ -68,38 +68,42 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-3">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="white-text">Contact</h5>
+                <hr>
+                <p class="small">Vadakkekunanthu Sree Rajarajeswari Devi Temple</p>
+                <p class="small">Vrindavan Nagar, Kadappakada</p>
+                <p class="small">Kollam 691008, Kerala</p>
+                <a class="small" ui-sref="contact" style="color:white;font-size: small">more</a>
+                <p></p>
             </div>
             <div class="col-md-2">
                 <h5 class="white-text">Links</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="javascript:void(0)">About</a></li>
-                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Contact</a></li>
                     <li><a class="grey-text text-lighten-3" href="javascript:void(0)">License</a></li>
                     <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Events</a></li>
                 </ul>
             </div>
             <div class="col-md-2">
-                <h5 class="white-text">Links</h5>
+                <h5 class="white-text">Navigate</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Yagam</a></li>
-                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">People</a></li>
+                    <li><a class="grey-text text-lighten-3" ui-sref="yagam">Yagam</a></li>
+                    <li><a class="grey-text text-lighten-3" ui-sref="contacts">People</a></li>
 
                 </ul>
             </div>
             <div class="col-md-2">
-                <a href="http://www.facebook.com" type="button" class="btn btn-sm btn-primary waves-effect waves-light"><i class="fa fa-facebook"> </i> <span>Facebook</span></a>
-                <a type="button" class="btn  btn-sm  btn-info waves-effect waves-light"><i class="fa fa-twitter"> </i> <span>Twitter</span></a>
-                <a type="button" class="btn btn-sm  btn-danger waves-effect waves-light"><i class="fa fa-google-plus"> </i> <span>Google +</span></a>
-                <a type="button" class="btn btn-sm  btn-default waves-effect waves-light"><i class="fa fa-envelope-o"> </i> <span>Email</span></a>
+                <a href="https://www.facebook.com/Vadakkekunnathu-Sreerajarajeswaridevi-Temple-Kollam-911505548945129/?fref=ts" type="button" class="btn btn-sm btn-primary waves-effect waves-light"><i class="fa fa-facebook"> </i> <span>Facebook</span></a>
+                <!--<a type="button" class="btn  btn-sm  btn-info waves-effect waves-light"><i class="fa fa-twitter"> </i> <span>Twitter</span></a>-->
+                <!--<a type="button" class="btn btn-sm  btn-danger waves-effect waves-light"><i class="fa fa-google-plus"> </i> <span>Google +</span></a>-->
+                <a type="button" href="mailto:test@gaml.com" class="btn btn-sm  btn-default waves-effect waves-light"><i class="fa fa-envelope-o"> </i> <span>Email</span></a>
             </div>
             <div class="col-md-2"></div>
         </div>
     </div>
     <div class="footer-copyright text-center rgba-black-light">
         <div class="container-fluid">
-            © 2016 Copyright: <a href="#">Vadakkekunnath Sree Raja Rajeshwari Devi Trust </a>
+            © 2016 Copyright: <a>Vadakkekunnath Sree Raja Rajeshwari Devi Trust </a>
         </div>
     </div>
 </footer>
