--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,47 @@
                 <h5 class="white-text">Links</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="javascript:void(0)">About</a></li>
-                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">License</a></li>
-                    <li><a class="grey-text text-lighten-3" href="javascript:void(0)">Events</a></li>
+                    <li><a class="grey-text text-lighten-3" data-target="#termsModal" data-toggle="modal">Terms and Conditions</a></li>
+                    <div class="modal fade" id="termsModal" role="dialog">
+                        <div class="modal-dialog modal-lg">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Terms and Conditions</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div ng-include="'src/termsandconditions.html'"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <li><a class="grey-text text-lighten-3" data-target="#bugReportModal" data-toggle="modal">Report Bug <i class="material-icons">bug_report</i></a></li>
+                    <div class="modal fade" id="bugReportModal" role="dialog">
+                        <div class="modal-dialog modal-lg">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Report bugs</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div ng-include="'src/bugreport.html'"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
                 </ul>
             </div>
             <div class="col-md-2">
