--- a/app/index.html
+++ b/app/index.html
@@ -45,11 +45,11 @@
     <div id="myNavbar" class="navbar-collapse collapse">
         <ul class="nav navbar-collapse">
             <li class="item1" ui-sref="home"><span >HOME</span></li>
-            <li class="item2" ui-sref="info"><span >INFO</span></li>
-            <li class="item3" ui-sref="poojas"><span >POOJAS</span></li>
-            <li class="item4" ui-sref="gallery"><span>GALLERY</span></li>
-            <li class="item5" ui-sref="contact"><span>CONTACT</span></li>
-            <li class="item6" ui-sref="yagam"><span>YAGAM</span></li>
+            <li class="item2" ui-sref="poojas"><span >POOJAS</span></li>
+            <li class="item3" ui-sref="gallery"><span>GALLERY</span></li>
+            <li class="item4" ui-sref="info"><span >INFO</span></li>
+            <li class="item5" ui-sref="yagam"><span>YAGAM</span></li>
+            <li class="item6" ui-sref="contact"><span>CONTACT</span></li>
             <hr id="floatingline"/>
 
         </ul>
@@ -70,10 +70,10 @@
             <div class="col-md-3">
                 <h5 class="white-text">Contact</h5>
                 <hr>
-                <p class="small">Vadakkekunanthu Sree Rajarajeswari Devi Temple</p>
-                <p class="small">Vrindavan Nagar, Kadappakada</p>
-                <p class="small">Kollam 691008, Kerala</p>
-                <a class="small" ui-sref="contact" style="color:white;font-size: small">more</a>
+                <p class="small white-text">Vadakkekunanthu Sree Rajarajeswari Devi Temple</p>
+                <p class="small white-text">Vrindavan Nagar, Kadappakada</p>
+                <p class="small white-text">Kollam 691008, Kerala</p>
+                <a class="small white-text" ui-sref="contact" style="color:white;font-size: small">more</a>
                 <p></p>
             </div>
             <div class="col-md-2">
@@ -127,7 +127,7 @@
                 <h5 class="white-text">Navigate</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" ui-sref="yagam">Yagam</a></li>
-                    <li><a class="grey-text text-lighten-3" ui-sref="contacts">People</a></li>
+                    <li><a class="grey-text text-lighten-3" ui-sref="contact">People</a></li>
 
                 </ul>
             </div>
