--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,10 @@
         <div class="container-fluid">
             © 2016 Copyright: <a>Vadakkekunnath Sree Raja Rajeshwari Devi Trust </a>
         </div>
+        <hr>
+        <div class="container-fluid">
+            Developed by: Kiran Bose (kiranbose@gmail.com)</a>
+        </div>
     </div>
 </footer>
 
